<resources>
    <string name="app_name">UnamRemit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="transaction">transaction</string>
    <string name="setting">setting</string>
    <string name="about">About UnamReimit</string>

    <!-- home -->
    <string name="start_remit">Start sending Money</string>
    <string name="workflow">How send money works</string>
    <string name="workflow_1">1. Set the amount you want to send</string>
    <string name="workflow_2">2. Set receiver\'s information</string>
    <string name="workflow_3">3. Choose your payment method</string>
    <string name="workflow_4">4. The receiver receive the money</string>

    <!-- amount -->
    <string name="ustomex">Sending from U.S.A to Mexico</string>
    <string name="sendingamount">Sending Amount</string>
    <string name="receivingamount">Receiving Amount</string>
    <string name="rate_hint">Exchange rate: </string>
    <string name="fee_hint">Transaction fee: </string>
    <string name="usd">USD</string>
    <string name="mxn">MXN</string>
    <string name="continued">Continue</string>
    <string name="back">Back</string>

    <!-- receiver -->
    <string name="receiverinfo">Receiver information</string>
    <string name="receive_method">How will the money be received?</string>
    <string name="deposittobank">Bank deposit</string>
    <string name="sendingto">Sending to</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last name</string>
    <string name="bankname">Bank Name</string>
    <string name="bankname_hint">Select a bank</string>
    <string name="clabe">CLABE</string>
    <!--TODO add bank name list-->
    <string-array name="banknamelist">
        <item>Select a bank</item>
        <item>PNC bank</item>
    </string-array>

    <!-- payment -->
    <string name="pay_method">How do you want to pay?</string>
    <string name="bank_account">Bank account (US)</string>
    <string name="debit_card">Debit card</string>
    <string name="credit_card">Credit card</string>

    <!-- Bank Account -->
    <string name="accountinfo">Bank Account Information</string>
    <string name="tip_accountinfo">Must be issued in the United State</string>
    <string name="routingno">Routing Number</string>
    <string name="hint_routingno">Routing Number(9 digits)</string>
    <string name="accountno">Account Number</string>
    <string name="hint_accountno">Account Number(4-17 digits)</string>
    <string name="contactinfo">Contact Information</string>
    <string name="hint_contactinfo">For vertification purpose, your contact information must be linked to the account</string>
    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="optional">Optional</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string-array name="state_name">
        <item>Select a state</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Mariana Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>United States Minor outlying Islands</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="zipcode">Zip code</string>

    <!-- Credit card -->
    <string name="cardinfo">Card Information</string>
    <string name="fullname">Full name</string>
    <string name="cardno">Card number</string>
    <string name="validdate">Valid Thru</string>
    <string name="hint_validmonth">MM</string>
    <string name="hint_validyear">YY</string>
    <string name="hint_validdash">/</string>
    <string name="cvv">CVV</string>
    <!-- Review -->
    <string name="send">Send Money</string>
    <string name="to">to</string>
    <string name="total">Total Pay: </string>
    <string name="pay">pay with</string>

</resources>
